--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ Django==1.8.2
 django-toolbelt==0.0.1
 gunicorn==19.3.0
 psycopg2==2.6
+pyshorteners==0.3
+requests==2.7.0
 static3==0.6.1
 wheel==0.24.0
